k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cupkey-api
spec:
  selector:
    app: cupkey-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
