k8s/cupkey.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cupkey-api
  labels:
    app: cupkey-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cupkey-api
    spec:
      containers:
        - name: cupkey-api
          image: eu.gcr.io/starthack2019-234023/cupkey-api:latest
          ports:
          - containerPort: 80
          - containerPort: 443
          - containerPort: 8080
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: cupkey-api-service
spec:
  selector:
    app: cupkey-api
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cupkey-api
  labels:
    app: cupkey-api
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: cupkey-api-tls-cert
  rules:
  - host: api-cupkey.benleb.de
    http:
      paths:
      - path: /
        backend:
          serviceName: cupkey-api-service
          servicePort: 8080
